httproute/2.18_httproute-splitting.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.202
  gatewayClassName: f5-gateway-class
  listeners:
  - protocol: HTTP
    port: 80
    name: prod-web-gw
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-splitting
  namespace: web
spec:
  parentRefs:
  - name: prod-web
    sectionName: prod-web-gw
  rules:
  - backendRefs:
    - name: coffee-svc
      port: 80
      weight: 90
    - name: tea-svc
      port: 80
      weight: 10
