httproute/2.19_httproute-cors.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cors-gw
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.202
  gatewayClassName: f5-gateway-class
  listeners:
  - name: http-cors
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-cors
  namespace: web
spec:
  parentRefs:
  - name: cors-gw
    sectionName: http-cors
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cors-behavior-creds-false
          # filters:
          # - cors:
          #     allowOrigins:
          #     - https://app.kakao.com
          #       allowCredentials: true
          #   type: CORS
  - backendRefs:
    - name: web-nginx-modifier-svc
      port: 80
