httproute/2.2_httproute-redirect-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: redirect-gw
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.202
  gatewayClassName: f5-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
    tls:
      mode: Terminate
      certificateRefs:
      - name: local-test-tls-cert
        namespace: sec-infra
        kind: Secret
        group: ""
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-http-route
  namespace: web
spec:
  parentRefs:
  - name: redirect-gw
    sectionName: http
  hostnames:
  - www.f5bnk.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
  - backendRefs:
    - name: httpbin
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-https-route
  namespace: web
  labels:
    gateway: redirect-gw
spec:
  parentRefs:
  - name: redirect-gw
    sectionName: https
  hostnames:
  - www.f5bnk.com
  rules:
  - backendRefs:
    - name: httpbin
      port: 8080
