httproute/2.3_httproute-method-preserve-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: redirect-gateway
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.202
  gatewayClassName: f5-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
    tls:
      mode: Terminate
      certificateRefs:
      - name: local-test-tls-cert
        namespace: sec-infra
        kind: Secret
        group: ""
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: method-preserving-redirect
  namespace: web
spec:
  parentRefs:
  - name: redirect-gateway
    sectionName: http
  hostnames:
  - www.f5bnk.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /coffee
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          replaceFullPath: /tea
        statusCode: 301 
  - backendRefs:
    - name: coffee-svc
      port: 80
