httproute/2.4_httproute-post-redirect-get.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: post-redirect-get-gw
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.202
  gatewayClassName: f5-gateway-class
  listeners:
  - name: http-post-redirect-get
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-post-redirect-get
  namespace: web
spec:
  parentRefs:
  - name: post-redirect-get-gw
    sectionName: http-post-redirect-get
  hostnames:
  - www.f5bnk.com
  rules:
  - matches:
    - path:
        type: Exact
        value: /latte/coffee
      method: POST
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          replaceFullPath: /black/tea
  - backendRefs:
    - name: httpbin
      port: 8080
