httproute/2.5_httproute-path-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: path-redirect-gw
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.202
  gatewayClassName: f5-gateway-class
  listeners:
  - name: http-path-redirect
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-path-redirect
  namespace: web
spec:
  parentRefs:
  - name: path-redirect-gw
    sectionName: http-path-redirect
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /latte
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /black
        statusCode: 302
  - backendRefs:
    - name: httpbin
      port: 8080
