httproute/2.8_httproute-rewrite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rewrite-gw
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.202
  gatewayClassName: f5-gateway-class
  listeners:
  - name: http-rewrite
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-rewrite
  namespace: web
spec:
  hostnames:
    - old.f5bnk.com
  parentRefs:
  - name: rewrite-gw
    sectionName: http-rewrite
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ip
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /headers
        statusCode: 302
  - backendRefs:
    - name: httpbin
      port: 8080
