httproute/2.9_httproute-request-response-modifier.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: modifier-gw
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.202
  gatewayClassName: f5-gateway-class
  listeners:
  - name: http-modifier
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-modifier
  namespace: web
spec:
  parentRefs:
  - name: modifier-gw
    sectionName: http-modifier
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /headers
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: Host
          value: new.f5bnk.com
  - matches:
    - path:
        type: PathPrefix
        value: /coffee
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: User-Agent
          value: Chrome
  - matches:
    - path:
        type: PathPrefix
        value: /tea
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        remove: ["X-tea-id"]
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: X-XSS-Protection
          value: "1; mode=block"
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: X-Frame-Options
          value: DIFFERENT
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        remove: ["X-Content-Type-Options"]
  - backendRefs:
    - name: web-nginx-modifier-svc
      port: 80
